--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>LSB-STEGANOGRAPHY</title>
+    <title>LSB-STEGANOGRAPHY</title>    
   </head>
 <body>
   Step 1 - Choose Secret Data :
@@ -32,5 +32,6 @@
   <hr/>
   Cover Image shown here after load image, and file automatically downloaded for you :)
   <canvas id="coverAfter" width="400" height="400"></canvas>
+  <script src="lsb-steganography.js"></script>
 </body>
 </html>
